--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -7,6 +7,9 @@
                 <ResourceDictionary Source="View/PersonView.xaml" />
                 <ResourceDictionary Source="View/PatientAssignmentListView.xaml" />
                 <ResourceDictionary Source="View/ScheduleView.xaml" />
+                <ResourceDictionary Source="View/TimeTickerView.xaml" />
+                <ResourceDictionary Source="View/RoomView.xaml" />
+                <ResourceDictionary Source="View/ScheduledAssignmentView.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
