--- a/AdminTools/View/PermissionsTreeView.xaml
+++ b/AdminTools/View/PermissionsTreeView.xaml
@@ -61,7 +61,7 @@
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="16" Height="16" Source="{Binding PhotoSource}" />
-                        <TextBlock Text="{Binding Name}" Tag="{Binding DataContext., RelativeSource={RelativeSource AncestorType={x:Type TreeView}}}">
+                        <TextBlock Text="{Binding Name}" Tag="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type TreeView}}}">
                             <TextBlock.ContextMenu>
                                 <ContextMenu DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
                                     <MenuItem Header="Редактировать"
