--- a/MainLib/View/PersonInsuranceDocumentsView.xaml
+++ b/MainLib/View/PersonInsuranceDocumentsView.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mainLib="clr-namespace:MainLib"
         xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
+        xmlns:wpf="http://wpfcontrols.com/"
+        xmlns:local="clr-namespace:Core"
         mc:Ignorable="d"
         Title="InsuranceDocementView" SizeToContent="WidthAndHeight" WindowStyle="None" BorderBrush="White" d:DataContext="{d:DesignInstance mainLib:PersonInsuranceDocumentsViewModel}">
-    
+
     <Window.Resources>
         <stuffLib:UniversalConverter x:Key="InsuranceDocementStateToBackgroundBrushConverter">
             <stuffLib:ConverterItem From="{x:Static mainLib:ItemState.Active}">
@@ -21,8 +23,34 @@
                 </stuffLib:ConverterItem.To>
             </stuffLib:ConverterItem>
         </stuffLib:UniversalConverter>
+
+        <DataTemplate x:Key="AutoCompleteTemplate">
+            <Border Padding="5">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="{Binding Path=NameSMOK}"
+                               FontWeight="Bold" 
+                               Grid.Column="0" 
+                               Grid.Row="0"
+                               VerticalAlignment="Bottom"/>
+                    <TextBlock Text="{Binding Path=AddressF}"
+                               Foreground="Gray"
+                               Grid.Column="0" 
+                               Grid.Row="2"
+                               FontFamily="Segoe UI"
+                               VerticalAlignment="Bottom"/>
+                </Grid>
+            </Border>
+        </DataTemplate>
     </Window.Resources>
-    
+
     <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <ListBox BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding InsuranceDocuments}">
             <ListBox.ItemTemplate>
@@ -54,8 +82,28 @@
 
                             <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="2" Text="Страховая компания" />
 
-                            <!--<ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Margin="2" ItemsSource="{Binding InsuranceCompany.NameSMOK}" SelectedValue="{Binding InsuranceCompanyId}" />-->
-
+                            <wpf:AutoCompleteTextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2" Background="White"
+                                 Watermark="введите слова из названия и регион для поиска"
+                                 DisplayMember="NameSMOK"
+                                 ItemTemplate="{StaticResource AutoCompleteTemplate}"
+                                 SelectedItem="{Binding InsuranceCompany}"
+                                 IconPlacement="Left"
+                                 IconVisibility="Visible"
+                                 Provider="{Binding DataContext.InsuranceCompanySuggestionProvider, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}"
+                                 x:Name="Actb" TabIndex="1">
+                                <wpf:AutoCompleteTextBox.Icon>
+                                    <Border Width="20" Height="20">
+                                        <Image Source="pack://application:,,,/Resources;component/Images/Loading16x16.gif"
+                                            Height="16"
+                                            Width="16"
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center" />
+                                    </Border>
+                                </wpf:AutoCompleteTextBox.Icon>
+                                <wpf:AutoCompleteTextBox.LoadingContent>
+                                    <TextBlock Text="Загрузка данных..." Margin="5" FontSize="14" />
+                                </wpf:AutoCompleteTextBox.LoadingContent>
+                            </wpf:AutoCompleteTextBox>
 
                             <TextBlock Grid.Row="4" Grid.Column="0" Margin="2" Text="Серия" />
                             <TextBox Grid.Row="4" Grid.Column="1" Margin="2" Text="{Binding Series}" />
@@ -74,5 +122,6 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <Button HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddInsuranceDocumentCommand}" Content="Добавить" Margin="5" Background="White"/>
+
     </StackPanel>
 </Window>
